# ElectraLite

./: .gitmodules  BUILD.md  CMakeLists.txt  README.md
electra/: CMakeLists.txt  ConfigSchema.h  ElectraDevice.cpp  ElectraDevice.h  ElectraMidi.h  ElectraSchema.h  InfoSchema.h  LibreMidiDevice.cpp  LibreMidiDevice.h  MidiDevice.cpp  MidiDevice.h  PresetSchema.h  RtMidiDevice.cpp  RtMidiDevice.h
electra/schema/: README.txt  schema.json
electra/sdk/: README.txt  schema.cpp  schema.h  schema.json
electra/tests/: CMakeLists.txt  e1_test_1.cpp  e1_test_2.cpp  e1_test_3.cpp  electratest.cpp
resources/: prefs.json  simpletest.epr
